poker coombs text - replaced, live bets gaps - fixed

--- a/src/widgets/CustomBets/styles.module.scss
+++ b/src/widgets/CustomBets/styles.module.scss
@@ -426,10 +426,10 @@
 
 @media screen and (max-width: 400px) {
   .customBets_titles_list {
-    grid-template-columns: 25px 50px 1fr 30px 35px;
+    grid-template-columns: 25px 60px 1fr 30px 35px;
   }
   .customBets_list_item {
-    grid-template-columns: 25px 50px 1fr 30px 35px;
+    grid-template-columns: 25px 60px 1fr 30px 35px;
   }
 }
 
